--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Pastebin-Service-final
+
+spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5444/postgres
+spring.datasource.password=postgres
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8080
